feat: add list submission route
